--- a/UILayer1/Views/User/Login.cshtml
+++ b/UILayer1/Views/User/Login.cshtml
@@ -16,6 +16,10 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Login" method="post">
+            @if (!string.IsNullOrEmpty(error))
+            {
+                <h1 class="alert-danger" style="padding:20px;">@error</h1>
+            }
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="userName" class="control-label"></label>
@@ -30,7 +34,7 @@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
-            <input asp-for="url" type="hidden" value="@System.Net.WebUtility.UrlEncode(loginUrl)"/>
+            <input asp-for="url" type="hidden" value="@System.Net.WebUtility.UrlEncode(loginUrl)" />
         </form>
     </div>
 </div>
